@@ -1035,7 +1035,7 @@
 			<itemizedlist>
 				<listitem><para>Press the <keycap>F9</keycap> key or click on the <guibutton>F9 Search</guibutton>.</para></listitem>
 				<listitem><para>Use the <keycombo><keycap>ALT</keycap><keycap>F7</keycap></keycombo>.</para></listitem>
-				<listitem><para>In the menubar select <menuchoice><guimenuitem>Edit</guimenuitem><guimenuitem>Search</guimenuitem></menuchoice>.</para></listitem></itemizedlist></para>
+				<listitem><para>In the menubar select <menuchoice><guimenuitem>File</guimenuitem><guimenuitem>Search</guimenuitem></menuchoice>.</para></listitem></itemizedlist></para>
       <para>When started, the following window is displayed:</para>
       <!-- ==== Figure ==== -->
       <figure id="search-dlg-fig">
